# cmd/docs/swagger.json
@@ -1,12 +1,88 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "RESTful API Users Dan TodoList Menggunakan Auth JWT (JSON WEB TOKEN)",
-        "title": "Users Dan TodoList RESTful API",
-        "contact": {},
+        "description": "Managament Todolist with Users auth",
+        "title": "Userd \u0026 Todolist Service",
+        "termsOfService": "https://tos.santoshk.dev",
+        "contact": {
+            "name": "Tirta Hakim Pambudhi",
+            "url": "https://github.com/tirtahakimpambudhi",
+            "email": "tirtanewwhakim22@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0.1"
     },
     "host": "localhost:3500",
-    "basePath": "/api",
-    "paths": {}
+    "basePath": "/api/",
+    "paths": {
+        "/admin/users": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Responds with the list of all User as JSON By Search",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get Users array",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search users by key",
+                        "name": "search",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "search users by key",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/web.StandartResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "web.StandartResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
